--- a/docs/ngay-10/1.setup-project-template.md
+++ b/docs/ngay-10/1.setup-project-template.md
@@ -1,5 +1,15 @@
 # Project template
 
+- Trong thực tế, việc setup project thường là do leader hoặc người có nhiều kinh nghiệm React thực hiện
+
+- Project template sẽ được lưu trữ trên một store online có thể là gitlab, github, bitbucket,...
+
+- Đối với những dự án khi phát triển sau này, project template sẽ được đem ra để setup dự án giúp giảm nhanh quá trình khởi tạo dự án khi bắt đầu
+
+- Ở đây mình có sẵn một project template đã phát triển qua nhiều dự án và tổng hợp lại, mọi người có thể clone về để tìm hiểu hoặc sử dụng nó để phát triển dự án cá nhân của mình
+
+https://github.com/dangthuyenvuong/spacedev-react-project-template
+
 # Tạo dự án bằng vitejs
 
 ### Bước 1: tạo dự án bằng vitejs 
