--- a/docs/ngay-10/1.setup-project-template.md
+++ b/docs/ngay-10/1.setup-project-template.md
@@ -43,7 +43,7 @@ https://github.com/dangthuyenvuong/spacedev-react-project-template
 
 
 ### Bước 3: Cài đặt các package sử dụng cho dự án
-`yarn add react-router-dom @reduxjs/toolkit axios classnames lodash moment redux react-redux styled-components`
+`yarn add react-router-dom @reduxjs/toolkit axios classnames lodash moment redux react-redux styled-components react-helmet`
 
 `yarn add tailwindcss postcss autoprefixer -D`
 
