--- a/docs/ngay-10/3.product.md
+++ b/docs/ngay-10/3.product.md
@@ -1,3 +1,40 @@
-# Product
+# Product, Paginate
 
-api: https://course.spacedev.vn/product
+API: https://course.spacedev.vn/product
+
+Sử dụng url search params sau để lấy ra product cần thiết
+
+Tên query| Giá trị tham khảo
+--|--
+page | 10 
+name | Laptop
+name | Laptop
+categories | 1789
+limit | 3
+fields | name,real_price,price,slug,id
+sort | real_price.desc
+minPrice | 1000
+maxPrice | 10000
+
+
+------------------------
+# LIST TO DO
+
+    [ ] Lấy product, sử dụng useQuery
+
+    [ ] Loading cho ProductCard
+
+    [ ] Paginate
+
+    [ ] useQuery: keepPreviousData
+
+
+# Lưu ý:
+
+- Sử dụng URL Search Param để lưu thông tin, khi refresh thông tin vẫn sẽ không bị mất
+
+- Sử dụng keepPreviousData khi muốn lưu dữ liệu trong 1 page
+
+- Skeleton khi chưa có data nên gần giống với ProductCard nhất có thể, tránh trường hợp Skeleton và ProductCard có layout khác nhau
+
+- Sử dụng Helmet cho title
