--- a/docs/ngay-10/2.pages.md
+++ b/docs/ngay-10/2.pages.md
@@ -10,7 +10,7 @@ Công cụ online: https://magic.reactjs.net/htmltojsx.htm
 
     /san-pham
 
-    🚫/[slug]-id[id] -> chi tiết sản phẩm  -> react-router-dom@^6.6 không còn cho phép
+    🚫/[slug]-p[id] -> chi tiết sản phẩm  -> react-router-dom@^6.6 không còn cho phép
 
     ✅/:slug
 
