--- a/docs/ngay-10/3.product.md
+++ b/docs/ngay-10/3.product.md
@@ -28,6 +28,8 @@ maxPrice | 10000
 
     [ ] useQuery: keepPreviousData
 
+        Giữ data của dữ liệu khi chuyển page, trong trường hợp di chuyển sang 1 màn hình khác thì dự liệu tự động được xóa
+
 
 # Lưu ý:
 
