--- a/docs/ngay-10/3.product.md
+++ b/docs/ngay-10/3.product.md
@@ -26,9 +26,13 @@ maxPrice | 10000
 
     [ ] Paginate
 
-    [ ] useQuery: keepPreviousData
+    [ ] useQuery: 
+        
+        keepPreviousData: Giữ data của dữ liệu khi chuyển page, trong trường hợp di chuyển sang 1 màn hình khác thì dự liệu tự động được xóa
 
-        Giữ data của dữ liệu khi chuyển page, trong trường hợp di chuyển sang 1 màn hình khác thì dự liệu tự động được xóa
+        queryFn({ signal }): Cancel khi request liên tục
+
+        
 
 
 # Lưu ý:
