--- a/docs/ngay-11/2.search.md
+++ b/docs/ngay-11/2.search.md
@@ -15,3 +15,9 @@
 - [ ] Gắn link vào "Tất cả sản phẩm"
 
 - [ ] Thêm category và cập nhật lại link "Tất cả sản phẩm"
+
+# Lưu ý:
+
+- Đối với những action như search cần có 1 khoảng debounce khi user dừng nhấn phím
+
+- Lưu thông tin search vào url search param để không mất giá trị khi refresh lại page
