--- a/docs/ngay-11/3.sort.md
+++ b/docs/ngay-11/3.sort.md
@@ -27,9 +27,15 @@ QUERY: ?sort=real_price.desc
 
 -`rating_average.desc`: Được đánh giá cao
 
+-`review_count.desc`: Mua nhiều nhất
+
 -`newest`:Sản phẩm mới nhất
 
 
 # LIST TO DO
 
-[ ] Sắp xếp sản phẩm đơn giản
+[ ] Sắp xếp sản phẩm dựa theo những ví dụ bên trên
+
+[ ] Cho quay về page 1 khi sort thay đổi
+
+[ ] Viết custom hook useSeach thay cho useSearchParams
