--- a/docs/ngay-11/3.sort.md
+++ b/docs/ngay-11/3.sort.md
@@ -27,9 +27,9 @@ QUERY: ?sort=real_price.desc
 
 -`rating_average.desc`: Được đánh giá cao
 
--`review_count.desc`: Mua nhiều nhất
+-`top_seller`: Mua nhiều nhất
 
--`newest`:Sản phẩm mới nhất
+-`newest`:Sản phẩm mới nhất - default
 
 
 # LIST TO DO
