--- a/docs/ngay-12/1.register.md
+++ b/docs/ngay-12/1.register.md
@@ -2,16 +2,25 @@
 
 [ ] Viết component Field
 
-[ ] Validate form register với các rule: password, confirm password
+[ ] Validate form register với các rule đặc biệt: password, confirm password
 
-[ ] Viết component Btton
+[ ] Viết component Button
 
 [ ] Sử dụng useQuery để call service
 
-[ ] Xử lý số lượng message quá nhiều
+[ ] Giới hạn số lượng message trên UI limit là 3
 
 [ ] Xử lý validate dependency trong useForm
 
 [ ] Xử lý gọi function rule mỗi lần component re-render
 
-[ ] Xử lý khi api trả về quá nhanh
+[ ] Xử lý khi api trả kết quả quá nhanh
+
+
+# Những lưu ý khi xử lý form
+
+1. Validate trước khi gửi data lên api
+
+2. Xử lý khi user click liên tục
+
+3. 
