--- a/docs/ngay-12/0.document.md
+++ b/docs/ngay-12/0.document.md
@@ -8,9 +8,9 @@
 
     [ ] Đăng ký
     
-    [ ] Đăng nhập
+    [ ] Đăng nhập / đăng xuất
 
-    [ ] Refresh token tự động và đăng nhập tài khoản trên nhiều máy
+    [ ] Cập nhật thông tin tài khoản, refresh token tự động, đăng nhập một tài khoản trên nhiều thiết bị, xử lý 
 
     [ ] Cập nhật thông tin cá nhân
 
