--- a/docs/ngay-12/0.document.md
+++ b/docs/ngay-12/0.document.md
@@ -14,6 +14,8 @@
 
     [ ] Thay đổi mật khẩu (validate những rule đặc biệt)
 
+    [ ] Upload avatar
+
     [ ] Sản phẩm yêu thích
 
     [ ] Lịch sử sản phẩm đã xem
