--- a/docs/ngay-12/6.wishlist.md
+++ b/docs/ngay-12/6.wishlist.md
@@ -8,9 +8,14 @@
 
 [ ] Xử lý khi user chưa login bằng 1 trong các cách sau:
 
-    - Chỉ cho xuất hiện button "yêu thích" khi đã login
+    - 🚫 Chỉ cho xuất hiện button "yêu thích" khi đã login -> Nếu là user mới vào website thì sẽ không biết đến chức năng này
 
     - Xuất hiện popupconfirm cần login
 
     - Redirect về trang login
 
+[ ] Xóa sản phẩm khỏi yêu thích
+
+    - Gọi lại api lấy danh sách yêu thích
+
+    - Clear previous data
