--- a/docs/ngay-12/8.payment.md
+++ b/docs/ngay-12/8.payment.md
@@ -17,3 +17,5 @@
 [ ] Xử lý khi payment không tồn tại
 
 [ ] Xử lý khi bỏ payment default trong trang edit
+
+[] Giới thiệu về Higher-Order-Component (HOC)
