--- a/docs/ngay-13/1.cart.md
+++ b/docs/ngay-13/1.cart.md
@@ -1,6 +1,6 @@
 # Cart
 
-API:
+# API
 
 1. Lấy thông tin cart:
 
@@ -21,35 +21,12 @@ API:
     }
     ```
 
-3. Xóa sản phẩm trong giỏ hàng:
+# LIST TO DO
 
-    DELETE: http://course.spacedev.vn/cart/:productId
+[] Thêm sản phẩm vào giỏ hàng
 
-    (Authorization Bearer)
+[] Lấy thông tin giỏ hàng
 
+[] Khi thêm sản phẩm thành công, scroll lên icon cart trên header giống tiki
 
-
-### Mục tiêu:
-
-Hoàn thành chức năng cart
-
-### LIST TO DO
-
-    [ ] Thêm sản phẩm vào giỏ hàng, Lấy thông tin giỏ hàng
-
-    [ ] Loading cho CartItem
-
-    [ ] Tăng / giảm, số lượng số lượng, xóa sản phẩm
-
-    [ ] Loading cho InputQuantity, Loading cho chức năng xóa sản phẩm
-
-    [ ] Xử lý đăng nhập trên nhiều thiết bị
-
-
-# Lưu ý:
-
-- Không tự tính số lượng, giá tiền ở Frontend
-
-- Không tự lưu thông tin dưới localStorage
-
-- Với những chức năng liên quan đến giá tiền, những dữ liệu quan trọng và logic phức tạp. Việc tính toán nên để Backend, Frontend chỉ nhận data và render ra.
+[] Xử lý khi user thêm 1 sản phẩm đã tồn tại trong cart, tăng số lượng đang có trong cart
