--- a/docs/ngay-13/1.cart.md
+++ b/docs/ngay-13/1.cart.md
@@ -25,7 +25,15 @@
 
 [] Thêm sản phẩm vào giỏ hàng
 
-[] Lấy thông tin giỏ hàng
+    - Khi user chưa login thì đẩy qua trang signin
+
+[] Xử lý thông tin giỏ hàng
+
+    - User đăng nhập trên nhiều máy, cần cập nhật giỏ hàng khi user vừa truy cập vào website
+
+    - Xử lý refetch token bị duplicate
+
+    - Xử lý login thì get cart, logout thì get cart
 
 [] Khi thêm sản phẩm thành công, scroll lên icon cart trên header giống tiki
 
