--- a/docs/ngay-14/1.view-cart.md
+++ b/docs/ngay-14/1.view-cart.md
@@ -2,6 +2,10 @@
 
 [ ] Render trang gio-hang
 
+    - Loading
+    
+    - Empty
+
 [ ] Xử lý pre-checkout
 
     - Select sản phẩm
@@ -9,3 +13,5 @@
     - Tăng / giảm / xóa sản phẩm sau khi select
 
     - Loading
+
+    - Disabled Button "Process To Checkout" khi selectItems.length === 0
