--- a/docs/ngay-14/0.list-to-do.md
+++ b/docs/ngay-14/0.list-to-do.md
@@ -15,6 +15,20 @@ Body:
     }
 ```
 
+
+2. Lấy danh sách thông tin shipping method
+
+GET: http://course.spacedev.vn/cart/v2/shipping-method
+
+(Authorization Bearer)
+
+
+2. Lấy thông tin của promotion code
+
+GET: http://course.spacedev.vn/cart/v2/:code
+
+(Authorization Bearer)
+
 # LIST TO DO
 
 [ ] View cart
@@ -30,3 +44,9 @@ Body:
 [ ] Re-order
 
 
+
+# Lưu ý
+
+- Khi làm FE những chức năng liên quan đến giá tiền thường sẽ để BE xử lý, FE chỉ việc gửi thông tin và render ra UI
+
+- 
