--- a/docs/ngay-14/1.view-cart.md
+++ b/docs/ngay-14/1.view-cart.md
@@ -6,7 +6,7 @@
     
     - Empty
 
-[ ] Khi user chưa đăng nhập
+[ ] Khi user chưa đăng nhập thì redirect về trang sigin
 
 [ ] Xử lý pre-checkout
 
