--- a/docs/ngay-14/2.promotion.md
+++ b/docs/ngay-14/2.promotion.md
@@ -3,3 +3,9 @@
 # LIST TO DO
 
 [ ] Add / Remove promotion
+
+    - Precheckout data
+
+    - Loading button
+
+    - Xử lý khi mã giãm giá không tồn tại
