--- a/docs/ngay-14/0.list-to-do.md
+++ b/docs/ngay-14/0.list-to-do.md
@@ -37,9 +37,7 @@ GET: http://course.spacedev.vn/cart/v2/:code
 
 [ ] Checkout / Checkout success
 
-[ ] Order list
-
-[ ] Order detail
+[ ] Order list / Order detail
 
 [ ] Re-order
 
