--- a/docs/ngay-14/3.checkout.md
+++ b/docs/ngay-14/3.checkout.md
@@ -34,3 +34,5 @@
 [ ] Tiến hành checkout
 
 ![Flow checkout](../img/checkout.jpg "Flow Checkout")
+
+[ ] Clear thông tin sau khi checkout thành công
