--- a/docs/ngay-15/3.review.md
+++ b/docs/ngay-15/3.review.md
@@ -5,3 +5,5 @@
 [ ] Bật chức năng review khi user đi từ trang "Theo dõi đơn hàng"
 
 [ ] Thực hiện chức năng review
+
+    - Lấy lại danh sách review và clear trạng thái review khi thực hiện review xong
