--- a/docs/ngay-16/1.translate.md
+++ b/docs/ngay-16/1.translate.md
@@ -2,8 +2,10 @@
 
 [ ] Tạo ra một Provider dùng để translate
 
-[ ] Thay đổi ngôn ngữ 
+[ ] Thay đổi ngôn ngữ trên Header
 
 [ ] Refresh page vẫn giữ lại ngôn ngữ đã chọn
 
 [ ] Biến TranslateProvider trở thành thư viện sử dụng lại qua nhiều dự án
+
+[ ] Translate đối với message thông báo
