--- a/docs/ngay-16/1.translate.md
+++ b/docs/ngay-16/1.translate.md
@@ -8,4 +8,6 @@
 
 [ ] Biến TranslateProvider trở thành thư viện sử dụng lại qua nhiều dự án
 
-[ ] Translate đối với message thông báo
+[ ] Translate đối với message thông báo trong Component (login)
+
+[ ] Translate đối với message bên ngoài component (Không khuyến khích sử dụng)
