--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,4 +1,7 @@
 {
     "Home": "Trang chủ",
-    "Product": "Sản phẩm"
+    "Product": "Sản phẩm",
+    "Login success": "Đăng nhập tài khoản thành công",
+    "Add promotion success": "Thêm mã giảm giá thành công",
+    "Remove promotion success": "Xóa mã giảm giá thành công"
 }
