--- a/docs/ngay-16/2.slider.md
+++ b/docs/ngay-16/2.slider.md
@@ -16,7 +16,7 @@ document: https://swiperjs.com/react
 
 - Sử dụng thư viện thông qua một component trung gian được tạo thủ công trong dự án
 
-- Khi cần thay đổi chúng ta chỉnh cần chỉnh sửa component trung gian và đảm bảo các props không thay đổi, ở những nơi sử dụng chúng ta sẽ hoàn toàn không cần phải thay đổi code
+- Khi cần thay đổi chúng ta chỉ cần chỉnh sửa component trung gian và đảm bảo các props không thay đổi, ở những nơi sử dụng chúng ta sẽ hoàn toàn không cần phải thay đổi code
 
 - Chỉ cần sử dụng khi cài đặt thư viện UI bên ngoài, không cần áp dụng với các design system
 
