--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -3,5 +3,6 @@
     "Product": "Sản phẩm",
     "Login success": "Đăng nhập tài khoản thành công",
     "Add promotion success": "Thêm mã giảm giá thành công",
-    "Remove promotion success": "Xóa mã giảm giá thành công"
+    "Remove promotion success": "Xóa mã giảm giá thành công",
+    "Sorry! something wrong": "Xin lỗi! đã có sự cố xẩy ra"
 }
