--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -5,5 +5,7 @@
     "Add promotion success": "Thêm mã giảm giá thành công",
     "Remove promotion success": "Xóa mã giảm giá thành công",
     "Sorry! something wrong": "Xin lỗi! đã có sự cố xẩy ra",
-    "HUNTING HOT DEAL FOR HOLIDAY 9/2": "SĂN HOT DEAL CHO LỄ 2/9"
+    "HUNTING HOT DEAL FOR HOLIDAY 9/2": "SĂN HOT DEAL CHO LỄ 2/9",
+    "Promotion product": "Sản phẩm khuyến mãi",
+    "House": "Nhà cửa"
 }
