--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,4 +1,7 @@
 {
     "Home": "家",
-    "Product": "产品"
+    "Product": "产品",
+    "Laptop": "笔记本电脑",
+    "Promotion product": "促销产品",
+    "House": "房子"
 }
