--- a/docs/ngay-11/3.sort.md
+++ b/docs/ngay-11/3.sort.md
@@ -8,7 +8,7 @@ QUERY: ?sort=real_price.desc
 
 - `real_price`: Tên field muốn sắp xếp
 
-- `desc`: Giá trị sắp xếp, desc: giãm dần, asc: tăng dần
+- `desc`: Giá trị sắp xếp, desc: giãm dần, `asc`: tăng dần
 
 - Lập trình viên có thể chủ động chọn cách sắp xếp, ngoài ra API còn hỗ trợ thêm những cách sắp xếp `đặc biệt`
 
